--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>BSUC 2025 Draft Lottery</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>BSUC 2025 Draft Lottery</title>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<style>
-:root {
---navy: #162636;
---gold: #C79A5B;
+  <style>
+    :root {
+      --navy: #162636;
+      --gold: #C79A5B;
       --white: #f5f1eb;
       --burgundy: #A22D2E;
       --light: #F5F1EB;
-      --accent-hover: #C03A3B;
     }
 
-    * {
-      box-sizing: border-box;
-}
-
-body {
-      font-family: 'Karla', sans-serif;
-background-color: var(--navy);
-      color: var(--white);
+    body {
+      margin: 0;
       font-family: 'Roboto', sans-serif;
-      color: var(--light);
-margin: 0;
-      padding: 0;
+      background-color: var(--navy);
+      color: var(--white);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -36,73 +28,55 @@ margin: 0;
     header {
       width: 100%;
       background: linear-gradient(90deg, var(--burgundy), var(--gold));
-padding: 20px;
+      padding: 20px;
       text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-}
+    }
 
-header h1 {
-      font-family: 'League Gothic', sans-serif;
-      font-size: clamp(2rem, 5vw, 4rem);
-      color: var(--gold);
+    header h1 {
+      margin: 0;
       font-family: 'Anton', sans-serif;
       font-size: 2.8rem;
       color: var(--light);
-      letter-spacing: 2px;
-margin: 0;
-}
+    }
 
-.subheader {
-      margin-bottom: 40px;
-      font-size: 1.2rem;
-      color: #ccc;
+    .subheader {
+      margin: 10px auto 30px;
+      font-size: 1.1rem;
       font-style: italic;
       color: #aaa;
-      margin: 10px auto 30px;
       text-align: center;
-      font-size: 1.1rem;
-}
+    }
 
-.on-the-clock {
-      font-size: 1.4rem;
-      text-align: center;
+    .on-the-clock {
       font-size: 1.3rem;
       color: var(--gold);
       text-transform: uppercase;
-      margin-top: 30px;
-font-weight: bold;
-      margin-bottom: 10px;
-}
+      font-weight: bold;
+      margin-top: 20px;
+    }
 
     .clock-name {
-    #clockName {
-      text-align: center;
-font-size: 2rem;
+      font-size: 2rem;
       font-weight: bold;
       color: var(--gold);
-margin-bottom: 30px;
-      font-weight: bold;
-}
+      margin-bottom: 20px;
+    }
 
-.dropdown-container {
+    .dropdown-container {
       display: flex;
-      justify-content: center;
       flex-wrap: wrap;
-margin-bottom: 30px;
-      gap: 15px;
-}
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
 
     select, button {
-    select, button#resetBtn, button#removeBtn {
-font-size: 1.1rem;
-padding: 12px;
-border-radius: 8px;
-border: none;
-      margin: 5px;
+      font-size: 1rem;
+      padding: 10px 15px;
+      border-radius: 6px;
+      border: none;
       font-weight: bold;
+      cursor: pointer;
     }
 
     select {
@@ -111,197 +85,144 @@ border: none;
     }
 
     button {
-      background-color: var(--gold);
       background-color: var(--light);
-color: var(--navy);
-      font-weight: bold;
-cursor: pointer;
-}
+      color: var(--navy);
+    }
 
     button:hover {
-      background-color: #b48a4f;
-    select:hover, button#resetBtn:hover, button#removeBtn:hover {
       background-color: #e5e2da;
-}
+    }
 
-.spots {
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-      margin-bottom: 40px;
+    .spots {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
       gap: 12px;
       max-width: 95%;
-      margin: 20px auto 40px;
-      padding: 0 20px;
-}
+      margin: 20px auto;
+    }
 
-.spot {
-      background-color: #ffffff22;
-      border: 2px solid var(--gold);
-      padding: 15px;
-      margin: 10px;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      font-size: 1.3rem;
-      background: rgba(245, 241, 235, 0.95);
-      color: var(--navy);
-      font-size: 1.2rem;
-      font-weight: bold;
+    .spot {
       width: 60px;
       height: 60px;
-display: flex;
-align-items: center;
-justify-content: center;
+      background-color: rgba(245, 241, 235, 0.95);
+      color: var(--navy);
+      font-weight: bold;
+      font-size: 1.2rem;
+      border: 2px solid var(--gold);
       border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      transition: transform 0.2s, background 0.3s;
-cursor: pointer;
-}
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+
+    .spot:hover {
+      transform: scale(1.08);
+    }
 
     .spot.taken {
       background-color: var(--gold);
       color: var(--navy);
-      border: none;
-      cursor: default;
-    .spot:hover {
-      transform: scale(1.08);
-      background: #ddd;
+      pointer-events: none;
     }
 
-    .taken {
-      background-color: #999 !important;
-      color: white !important;
-      pointer-events: none;
-}
-
-.draft-order {
-      max-width: 600px;
-      margin: 0 auto;
-      text-align: left;
+    .draft-order {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 12px;
       max-width: 800px;
       margin: 40px auto;
       padding: 0 20px;
-}
+    }
 
-.draft-pick {
-      font-size: 1.3rem;
-      border-bottom: 1px solid #ccc;
-      padding: 10px;
+    .draft-pick {
       background-color: var(--light);
       color: var(--navy);
       padding: 16px;
       font-size: 1.2rem;
-      border-radius: 8px;
       font-weight: bold;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      border-radius: 8px;
       text-align: center;
-}
+      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+    }
 
-    @media (max-width: 600px) {
-      .spots {
-        gap: 8px;
-      }
     #timerSection {
       text-align: center;
       margin: 30px 0;
     }
 
-      .spot {
-        margin: 5px;
-        width: 40px;
-        height: 40px;
-        font-size: 1rem;
-      }
     #timerDisplay {
-      font-size: 2.5rem;
+      font-size: 3rem;
       font-weight: bold;
       margin-bottom: 10px;
     }
 
-      .clock-name {
-        font-size: 1.5rem;
-      }
     .flashing {
       animation: flash 1s infinite;
     }
 
-      .draft-order {
-        font-size: 1rem;
-      }
     @keyframes flash {
       0%, 100% { color: red; }
       50% { color: white; }
-}
-</style>
+    }
+
+    @media (max-width: 600px) {
+      .spot {
+        width: 40px;
+        height: 40px;
+        font-size: 1rem;
+      }
+
+      .clock-name {
+        font-size: 1.5rem;
+      }
+
+      .draft-pick {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
-<header>
-<h1>BSUC 2025 Draft Lottery</h1>
-</header>
-<div class="subheader">Football is legacy. Crooning is life.</div>
+  <header>
+    <h1>BSUC 2025 Draft Lottery</h1>
+  </header>
+  <div class="subheader">Football is legacy. Crooning is life.</div>
 
-<div class="on-the-clock">ON THE CLOCK</div>
-<div class="clock-name" id="clockName">Select a manager below</div>
+  <div class="on-the-clock">ON THE CLOCK</div>
+  <div class="clock-name" id="clockName">Select a manager below</div>
 
-<div class="dropdown-container" id="dropdownContainer">
-<select id="managerDropdown" onchange="updateClockName()">
-<option disabled selected>Select manager</option>
-<option>Justin</option>
-<option>Ryan</option>
-<option>Jared</option>
-<option>Fyola</option>
-<option>Alex K</option>
-<option>Alex G</option>
-<option>Jimmy</option>
-<option>Evan</option>
-<option>Timmy</option>
-<option>Jonathan</option>
-<option>Kyle</option>
-<option>Seth</option>
-</select>
+  <div class="dropdown-container">
+    <select id="managerDropdown" onchange="setManager()">
+      <option disabled selected>Select manager</option>
+      <option>Justin</option>
+      <option>Ryan</option>
+      <option>Jared</option>
+      <option>Fyola</option>
+      <option>Alex K</option>
+      <option>Alex G</option>
+      <option>Jimmy</option>
+      <option>Evan</option>
+      <option>Timmy</option>
+      <option>Jonathan</option>
+      <option>Kyle</option>
+      <option>Seth</option>
+    </select>
     <button onclick="resetBoard()">Reset</button>
-    <button onclick="removePickPrompt()">Remove Pick</button>
+    <button onclick="removePick()">Remove Pick</button>
     <button onclick="lockDraft()">Lock Picks</button>
-    <button id="resetBtn" onclick="resetBoard()">Reset</button>
-    <button id="removeBtn" onclick="removePickPrompt()">Remove Pick</button>
-</div>
+  </div>
 
-<div class="spots" id="spotsContainer">
-<div class="spot" onclick="selectSpot(this)">1</div>
-<div class="spot" onclick="selectSpot(this)">2</div>
-<div class="spot" onclick="selectSpot(this)">3</div>
-<div class="spot" onclick="selectSpot(this)">4</div>
-<div class="spot" onclick="selectSpot(this)">5</div>
-<div class="spot" onclick="selectSpot(this)">6</div>
-<div class="spot" onclick="selectSpot(this)">7</div>
-<div class="spot" onclick="selectSpot(this)">8</div>
-<div class="spot" onclick="selectSpot(this)">9</div>
-<div class="spot" onclick="selectSpot(this)">10</div>
-<div class="spot" onclick="selectSpot(this)">11</div>
-<div class="spot" onclick="selectSpot(this)">12</div>
-</div>
+  <div class="spots" id="spotsContainer">
+    <!-- Spots 1-12 -->
+  </div>
 
-<div class="draft-order" id="draftOrder">
-<div class="draft-pick" id="pick-1">1. </div>
-<div class="draft-pick" id="pick-2">2. </div>
-<div class="draft-pick" id="pick-3">3. </div>
-<div class="draft-pick" id="pick-4">4. </div>
-<div class="draft-pick" id="pick-5">5. </div>
-<div class="draft-pick" id="pick-6">6. </div>
-<div class="draft-pick" id="pick-7">7. </div>
-<div class="draft-pick" id="pick-8">8. </div>
-<div class="draft-pick" id="pick-9">9. </div>
-<div class="draft-pick" id="pick-10">10. </div>
-<div class="draft-pick" id="pick-11">11. </div>
-<div class="draft-pick" id="pick-12">12. </div>
-</div>
+  <div class="draft-order" id="draftOrder">
+    <!-- Picks 1-12 -->
+  </div>
 
   <div id="timerSection">
     <div id="timerDisplay">60</div>
@@ -311,89 +232,95 @@ cursor: pointer;
     <audio id="buzzer" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg"></audio>
   </div>
 
-<script>
-const managerOnClock = document.getElementById('clockName');
-const spots = document.querySelectorAll('.spot');
-
-function updateClockName() {
-const dropdown = document.getElementById('managerDropdown');
-      managerOnClock.textContent = dropdown.value;
-      const selectedName = dropdown.value;
-      managerOnClock.textContent = selectedName;
-}
-
-function selectSpot(el) {
-if (el.classList.contains('taken')) return;
-const spot = el.textContent;
-const managerName = managerOnClock.textContent;
-if (managerName === 'Select a manager below') return;
-
-const pickEl = document.getElementById(pick-${spot});
-if (pickEl) {
-pickEl.textContent = ${spot}. ${managerName};
-el.classList.add('taken');
-el.removeAttribute('onclick');
-}
-}
-
-function resetBoard() {
-spots.forEach(spot => {
-spot.classList.remove('taken');
-spot.setAttribute('onclick', 'selectSpot(this)');
-});
-for (let i = 1; i <= 12; i++) {
-document.getElementById(pick-${i}).textContent = ${i}. ;
-}
-managerOnClock.textContent = 'Select a manager below';
-document.getElementById('managerDropdown').selectedIndex = 0;
-}
-
-function removePickPrompt() {
-const pickNum = prompt("Enter the draft spot number to clear (1-12):");
-const spotNum = parseInt(pickNum);
-if (!isNaN(spotNum) && spotNum >= 1 && spotNum <= 12) {
-const pickEl = document.getElementById(pick-${spotNum});
-if (pickEl) pickEl.textContent = ${spotNum}. ;
-
-spots.forEach(spot => {
-if (spot.textContent === String(spotNum)) {
-spot.classList.remove('taken');
-spot.setAttribute('onclick', 'selectSpot(this)');
-}
-});
-} else {
-alert("Invalid input. Please enter a number from 1 to 12.");
-}
-}
-
-    function lockDraft() {
-      document.querySelectorAll('select, button').forEach(el => el.disabled = true);
-      spots.forEach(spot => {
-        spot.style.pointerEvents = 'none';
-      });
+  <script>
+    const managerDropdown = document.getElementById("managerDropdown");
+    const clockName = document.getElementById("clockName");
+    const draftOrder = document.getElementById("draftOrder");
+    const spotsContainer = document.getElementById("spotsContainer");
     let timer;
     let timeLeft = 60;
-    const display = document.getElementById("timerDisplay");
+
+    // Generate 12 spots
+    for (let i = 1; i <= 12; i++) {
+      const spot = document.createElement("div");
+      spot.classList.add("spot");
+      spot.textContent = i;
+      spot.onclick = () => assignPick(i, spot);
+      spotsContainer.appendChild(spot);
+
+      const pick = document.createElement("div");
+      pick.classList.add("draft-pick");
+      pick.id = `pick-${i}`;
+      pick.textContent = `${i}.`;
+      draftOrder.appendChild(pick);
+    }
+
+    function setManager() {
+      clockName.textContent = managerDropdown.value;
+    }
+
+    function assignPick(number, spotEl) {
+      const manager = clockName.textContent;
+      if (!manager || manager === "Select a manager below") return;
+
+      const pickEl = document.getElementById(`pick-${number}`);
+      if (pickEl.textContent.trim() !== `${number}.`) return;
+
+      pickEl.textContent = `${number}. ${manager}`;
+      spotEl.classList.add("taken");
+      spotEl.onclick = null;
+    }
+
+    function removePick() {
+      const pickNum = prompt("Enter the pick number to clear (1–12):");
+      const num = parseInt(pickNum);
+      if (isNaN(num) || num < 1 || num > 12) return alert("Invalid number.");
+      const pickEl = document.getElementById(`pick-${num}`);
+      pickEl.textContent = `${num}.`;
+
+      const spot = [...document.querySelectorAll(".spot")].find(s => s.textContent == num);
+      if (spot) {
+        spot.classList.remove("taken");
+        spot.onclick = () => assignPick(num, spot);
+      }
+    }
+
+    function resetBoard() {
+      document.querySelectorAll(".draft-pick").forEach((pick, i) => {
+        pick.textContent = `${i + 1}.`;
+      });
+      document.querySelectorAll(".spot").forEach((spot, i) => {
+        spot.classList.remove("taken");
+        spot.onclick = () => assignPick(i + 1, spot);
+      });
+      managerDropdown.selectedIndex = 0;
+      clockName.textContent = "Select a manager below";
+    }
+
+    function lockDraft() {
+      document.querySelectorAll("select, button").forEach(el => el.disabled = true);
+      document.querySelectorAll(".spot").forEach(spot => {
+        spot.style.pointerEvents = "none";
+      });
+    }
+
+    const timerDisplay = document.getElementById("timerDisplay");
     const buzzer = document.getElementById("buzzer");
 
-    function updateDisplay() {
-      display.textContent = timeLeft;
-      if (timeLeft <= 10 && timeLeft > 0) {
-        display.classList.add("flashing");
-      } else {
-        display.classList.remove("flashing");
-      }
+    function updateTimerDisplay() {
+      timerDisplay.textContent = timeLeft;
+      timerDisplay.classList.toggle("flashing", timeLeft <= 10 && timeLeft > 0);
     }
 
     function startTimer() {
       clearInterval(timer);
       timer = setInterval(() => {
         timeLeft--;
-        updateDisplay();
-        if (timeLeft === 0) {
+        updateTimerDisplay();
+        if (timeLeft <= 0) {
           clearInterval(timer);
           buzzer.play();
-          display.classList.remove("flashing");
+          timerDisplay.classList.remove("flashing");
         }
       }, 1000);
     }
@@ -405,9 +332,10 @@ alert("Invalid input. Please enter a number from 1 to 12.");
     function resetTimer() {
       clearInterval(timer);
       timeLeft = 60;
-      updateDisplay();
-      display.classList.remove("flashing");
-}
-</script>
+      updateTimerDisplay();
+    }
+
+    updateTimerDisplay();
+  </script>
 </body>
 </html>
